objects/PKB_Featured__c.object
<CustomObject><fields>
        <fullName>Article_Number__c</fullName>
        <description>The article number of the article being linked to as a keyword or featured article. Not the same as the Article or Knowledge Article Version record ID.</description>
        <inlineHelpText>The article number of the article being linked to as a keyword or featured article. Not the same as the Article or Knowledge Article Version record ID.</inlineHelpText>
        <label>Article Number</label>
        <length>9</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Expiration__c</fullName>
        <description>Date after which the article will no longer appear in the "Featured" section. A empty value means no expiration date. Does not apply to records with the "Is Keyword Article" checked.</description>
        <inlineHelpText>Date after which the article will no longer appear in the "Featured" section. A empty value means no expiration date. Does not apply to records with the "Is Keyword Article" checked.</inlineHelpText>
        <label>Featured Expiration</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Is_Keyword_Article__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this field if this article is linked to a keyword. When checked, this article will not appear in the Featured Articles section of the PKB and will instead appear as a Recommended article whenever the keyword(s) specified on this record are searched for.</description>
        <inlineHelpText>Check this field if this article is linked to a keyword. When checked, this article will not appear in the Featured Articles section of the PKB and will instead appear as a Recommended article whenever the keyword(s) specified on this record are searched</inlineHelpText>
        <label>Is Keyword Article?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Keyword__c</fullName>
        <description>Enter the keyword or keywords here so that, when those keywords are entered into a search on the PKB, this article will appear at the top of the search results as a recommended article.</description>
        <inlineHelpText>Enter the keyword or keywords here so that, when those keywords are entered into a search on the PKB, this article will appear at the top of the search results as a recommended article.</inlineHelpText>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Specifies the order that this article will appear when being displayed with other articles as part of the featured or recommended sections. Lower numbers appear towards the top.</description>
        <inlineHelpText>Specifies the order that this article will appear when being displayed with other articles as part of the featured or recommended sections. Lower numbers appear towards the top.</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>PKB_Name__c</fullName>
        <description>This must match one of the API names of the Sites that are configured to use the PKB package.</description>
        <inlineHelpText>This must match one of the API names of the Sites that are configured to use the PKB package.</inlineHelpText>
        <label>PKB Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>allows admins to push articles into the "Featured" section, or, alternatively, by specifying a keyword or keywords, allows admins to push articles to the top of searches for those keywords.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>false</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>PKB Featured</label><nameField>
        <displayFormat>PKBF-{000000}</displayFormat>
        <label>PKB Featured Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>PKB Featured</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Article_Number__c</columns>
        <columns>Expiration__c</columns>
        <columns>Is_Keyword_Article__c</columns>
        <columns>Keyword__c</columns>
        <columns>PKB_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><validationRules>
        <fullName>Check_Article_Number_have_9_digits</fullName>
        <active>true</active>
        <errorConditionFormula>LEN(Article_Number__c ) &lt; 9</errorConditionFormula>
        <errorDisplayField>Article_Number__c</errorDisplayField>
        <errorMessage>Article Number should be 9 digits (eg: 00001000).</errorMessage>
    </validationRules></CustomObject>